update css Branch

--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Database</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
     <h1>Welcom TO Movie Database</h1>
     </header>
-    <section>
-        <img src="https://wallpapercave.com/wp/jCDL6OV.jpg">
+    <section class="info-section">
+        <img class="cover-img" src="https://wallpapercave.com/wp/jCDL6OV.jpg">
         <h2>Discover Popular Movies</h2>
         <p>Explore our Collection of timeless and blockBusters Hits.
         <br>
@@ -17,8 +18,8 @@
     </p>
     <p align="right">Movie Database is Your Number 1</p>
     </section>
-    <section>
-    <table border="1">
+    <section class="movie-section">
+    <table class="movie-table">
 <tr>
     <th>Title</th>
     <th>Director</th>
@@ -40,7 +41,7 @@
     </table>
 
     </section>
-    <section>
+    <section class="top-movies-section">
         <h2>Top 5 Movies</h2>
         <ol>
             <li>Fight Club</li>
@@ -51,7 +52,7 @@
 
         </ol>
     </section>
-    <section>
+    <section class="Form-section">
         <h2>Enter Your Fav Movies</h2>
 
         <form action="/Submit">
