--- a/Pages/Movie.html
+++ b/Pages/Movie.html
@@ -42,6 +42,29 @@
                 </div>
             </div>
         </section>
+        <section class="popular-movies">
+            <h2>Popular Movies </h2>
+            <div class="popular-movie-container">
+                    <div class="movie-item">
+                        <img src="../assets/inception.jpg" alt="">
+                        <h3>inception</h3>
+                        <p>Scince Fiction</p>
+                    </div>
+                    <div class="movie-item">
+                        <img src="../assets/interstellar.jpg" alt="">
+                        <h3>interstellar</h3>
+                        <p>Anostromy / Advanture / Drama</p>
+                    </div>
+                    <div class="movie-item">
+                        <img src="../assets/dark-knight.jpg" alt="">
+                        <h3> The Dark knight</h3>
+                        <p>Action</p>
+                    </div>
+            </div>
+        </section>
+        <footer>
+            <p>&copy; 2024 Movie Database. All rights reserved </p>
+        </footer>
         
     </body>
     </html>
