--- a/Pages/Movie.html
+++ b/Pages/Movie.html
@@ -47,18 +47,24 @@
             <div class="popular-movie-container">
                     <div class="movie-item">
                         <img src="../assets/inception.jpg" alt="">
+                        <div class="movie-info">
                         <h3>inception</h3>
                         <p>Scince Fiction</p>
+                        </div>
                     </div>
                     <div class="movie-item">
                         <img src="../assets/interstellar.jpg" alt="">
+                        <div class="movie-info">
                         <h3>interstellar</h3>
                         <p>Anostromy / Advanture / Drama</p>
+                        </div>
                     </div>
                     <div class="movie-item">
                         <img src="../assets/dark-knight.jpg" alt="">
+                        <div class="movie-info">
                         <h3> The Dark knight</h3>
                         <p>Action</p>
+                    </div>
                     </div>
             </div>
         </section>
