--- a/Pages/Director.html
+++ b/Pages/Director.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Oppenheimer</title>
-    <link rel="stylesheet" href="../styles/movie.css">
+    <title>Christopher Nolan</title>
+    <link rel="stylesheet" href="../styles/Director.css">
 </head>
 
 <body>
@@ -14,42 +14,33 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./Movies.html">Movies</a></li>
-                <li><a href="#directors">Contact</a></li>
+                <li><a href="#directors">Directors</a></li>
             </ul>
         </nav>
     </header>
-    <section class="movie-details">
-        <div class="movie-banner">
+    <section class="director-details">
+        <div class="director-banner">
             <div class="overlay"></div>
-            <div class="movie-banner-info">
-                <div class="movie-poster">
-                    <img src="../assets/poster.webp" alt="Movie Poster">
+            <div class="director-info">
+                <div class="director-photo">
+                    <img src="../assets/director.webp" alt="Director Photo">
                 </div>
-                <div class="movie-text">
-                    <h1>Oppenheimer</h1>
-                    <h2>Movie</h2>
-                    <p>Biography / Drama / History</p>
-                    <div class="ratings">
-                        <span>★★★★☆</span>
+                <div class="director-text">
+                    <h1>Christopher Nolan</h1>
+                    <p>Director / Writer / Producer</p>
+                    <div class="bio">
+                        <p>
+                            Christopher Nolan is a British-American film director, producer, and screenwriter known for
+                            his distinct storytelling style and complex narratives.
+                        </p>
                     </div>
-                    <div class="buttons">
-                        <button class="watch-now">Watch Now</button>
-                        <button class="watch-trailer">Watch Trailer</button>
-                    </div>
-                    <p class="description">
-                        The story of American scientist J. Robert Oppenheimer and his role in the development of the
-                        atomic bomb.
-                    </p>
-                    <p class="description">
-                        by <a href="director.html?id=1">Christopher Nolan</a>
-                    </p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="popular-movies">
-        <h2>Popular Movies</h2>
-        <div class="popular-movies-container">
+    <section class="director-movies">
+        <h2>Movies by Christopher Nolan</h2>
+        <div class="director-movies-container">
             <div class="movie-item">
                 <img src="../assets/inception.jpg" alt="Movie 1">
                 <div class="movie-info">
