Add Responsive To Home Page and Movies & exercis on Grid

--- a/Pages/Movies.html
+++ b/Pages/Movies.html
@@ -41,7 +41,7 @@
     <section class="movie-listing">
         <h1>Movie Listings</h1>
         <div class="grid-container">
-            <div class="movie-card">
+            <div class="movie-card big-poster">
                 <img src="https://cdn.prod.website-files.com/6009ec8cda7f305645c9d91b/6408f6e7b5811271dc883aa8_batman-min.png"
                     alt="Movie 1">
                 <div class="info">
@@ -109,7 +109,7 @@
                     <p>Director: Christopher Nolan</p>
                 </div>
             </div>
-            <div class="movie-card">
+            <div class="movie-card cover-poster">
                 <img src="../assets/poster.webp" alt="Movie 1">
                 <div class="info">
                     <p>Oppenheimer</p>
