--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -8,11 +8,13 @@
     <body>
         <header class="main-header">
            <div class="logo">Movie Database</div>
+           <input type="checkbox" id="menu-toggle">
+           <label for="menu-toggle" class="menu-icon"></label>
            <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#movies">Movies</a></li>
-                <li><a href="#directors">Directors</a></li>
+                <li><a href="../Pages/Index.html">Home</a></li>
+                <li><a href="../Pages/Movies.html">Movies</a></li>
+                <li><a href="../Pages/Directors.html">Directors</a></li>
             </ul>
            </nav>
         </header>
